--- a/style.css
+++ b/style.css
@@ -25,3 +25,50 @@ body{
 canvas{
     background-color: var(--bg-color-field);
 }
+
+.score{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1.8rem;
+}
+
+.score-value{
+    font-weight: 700;
+    font-size: 4.5rem;
+    display: block;
+    margin-top: -10px;
+}
+
+.menu-screen{
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
+
+.game-over{
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 3rem;
+}
+
+.final{
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+
+.btn-play{
+    border: none;
+    border-radius: 10rem;
+    padding: 1rem 1.5rem 1rem 1.2rem;
+    font-size: 1rem;
+    font-weight: 600;
+    color: #333;
+    margin-top: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5rem;
+    cursor: pointer;
+}
